--- a/index.html
+++ b/index.html
@@ -1,59 +1,143 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ausescortsbooking.com</title>
-  <meta name="description" content="Luxury Companions for Your Wildest Desires">
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ausescortsbooking</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, #ffcce6, #cce6ff); /* baby pink + powder blue */
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #fff;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    header h1 {
+      margin: 0;
+      color: #e60073;
+    }
+    .container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 20px;
+    }
+    .model-card {
+      background: #fff;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-align: center;
+    }
+    .model-card img {
+      width: 100%;
+      height: 350px;
+      object-fit: cover;
+      border-radius: 12px;
+    }
+    .rate {
+      font-weight: bold;
+      margin-top: 10px;
+      color: #e60073;
+    }
+    .book-btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background: #e60073;
+      color: #fff;
+      text-decoration: none;
+      border-radius: 8px;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+    .book-btn:hover {
+      background: #b30059;
+    }
+    footer {
+      background: #fff;
+      text-align: center;
+      padding: 10px;
+      margin-top: 20px;
+      box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+    }
+  </style>
 </head>
 <body>
-  <header class="site-header">
-    <div class="container">
-      <h1 class="logo">ausescortsbooking.com</h1>
-      <nav class="nav">
-        <a href="#features">Features</a>
-        <a href="#about">About</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </div>
+  <header>
+    <h1>Ausescortsbooking</h1>
+    <p>Luxury Companions for Your Wildest Desires</p>
   </header>
 
-  <main>
-    <section class="hero">
-      <div class="container">
-        <h2>Luxury Companions for Your Wildest Desires</h2>
-        <p>Discover exclusive experiences tailored to your fantasies. Confidential, elegant, and unforgettable.</p>
-        <a class="btn" href="#contact">Book Now</a>
-      </div>
-    </section>
+  <div class="container">
+    <!-- Model 1 -->
+    <div class="model-card">
+      <img src="model1.jpg" alt="Shane">
+      <h2>Shane, 24</h2>
+      <p>Elegant and charming. Perfect for dinner dates or private sessions.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Dinner, Drinks, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Shane" class="book-btn">Book Now</a>
+    </div>
 
-    <section id="features" class="container features">
-      <h3>Why Choose Us</h3>
-      <ul>
-        <li>Discreet & secure booking</li>
-        <li>Elegant, professional companions</li>
-        <li>Tailored luxury experiences</li>
-      </ul>
-    </section>
+    <!-- Model 2 -->
+    <div class="model-card">
+      <img src="model2.jpg" alt="Emily">
+      <h2>Emily, 24</h2>
+      <p>Fun and adventurous. Loves nightlife and luxury travel.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Night Out, Drinks, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Emily" class="book-btn">Book Now</a>
+    </div>
 
-    <section id="about" class="container about">
-      <h3>About Us</h3>
-      <p>We provide premium companions for distinguished clients. Our service is focused on privacy, luxury, and complete satisfaction.</p>
-    </section>
+    <!-- Model 3 -->
+    <div class="model-card">
+      <img src="model3.jpg" alt="Hailey">
+      <h2>Hailey, 23</h2>
+      <p>Young and vibrant. Full of energy for an unforgettable experience.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Dinner Date, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Hailey" class="book-btn">Book Now</a>
+    </div>
 
-    <section id="contact" class="container contact">
-      <h3>Contact Us</h3>
-      <p>Email us at <a href="mailto:australiaescortbooking1989@gmail.com">australiaescortbooking1989@gmail.com</a></p>
-    </section>
-  </main>
+    <!-- Model 4 -->
+    <div class="model-card">
+      <img src="model4.jpg" alt="Hyacinth">
+      <h2>Hyacinth, 25</h2>
+      <p>Mature and sophisticated, perfect for upscale events and travel.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Events, Travel, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Hyacinth" class="book-btn">Book Now</a>
+    </div>
 
-  <footer class="site-footer">
-    <div class="container">© <span id="year"></span> ausescortsbooking.com</div>
+    <!-- Model 5 -->
+    <div class="model-card">
+      <img src="model5.jpg" alt="Stephanie">
+      <h2>Stephanie, 26</h2>
+      <p>Playful and passionate. Loves intimate moments and deep connections.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Private Time, Dinner</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Stephanie" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 6 -->
+    <div class="model-card">
+      <img src="model6.jpg" alt="Kimberly">
+      <h2>Kimberly, 26</h2>
+      <p>Stylish and outgoing. The perfect partner for parties and nightlife.</p>
+      <p class="rate">Rates: $250/hour</p>
+      <p>Inclusions: Party, Drinks, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Kimberly" class="book-btn">Book Now</a>
+    </div>
+  </div>
+
+  <footer>
+    <p>Contact us: australiaescortbooking1989@gmail.com</p>
   </footer>
-
-  <script>
-    document.getElementById('year').innerText = new Date().getFullYear();
-  </script>
 </body>
 </html>
