--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <section class="why">
     <h2>Why Choose Us</h2>
     <ul>
-      <li>Unmatched luxury experiences tailored to your desires</li>
+      <li>Matched luxury experiences tailored to your desires</li>
       <li>High-quality service with discretion and professionalism</li>
       <li>Hand-picked companions who embody charm and elegance</li>
       <li>Personalized experiences designed to meet your expectations</li>
@@ -159,13 +159,15 @@
   </section>
 
   <div class="container">
-    <!-- Model 1 -->
+       <!-- Model 1 -->
     <div class="model-card">
       <img src="model1.jpg" alt="Shane">
       <h2>Shane, 24</h2>
       <p>Elegant and charming. Perfect for dinner dates or private sessions.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Dinner, Drinks, Private Time</p>
+      <p><strong>Height:</strong> 167cm | <strong>Weight:</strong> 50kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 27" | <strong>Hips:</strong> 40"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Dinner, Drinks, Private Time</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Shane" class="book-btn">Book Now</a>
     </div>
 
@@ -174,8 +176,10 @@
       <img src="model2.jpg" alt="Emily">
       <h2>Emily, 24</h2>
       <p>Fun and adventurous. Loves nightlife and luxury travel.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Night Out, Drinks, Private Time</p>
+      <p><strong>Height:</strong> 166cm | <strong>Weight:</strong> 51kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 28" | <strong>Hips:</strong> 41"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Night Out, Drinks, Private Time</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Emily" class="book-btn">Book Now</a>
     </div>
 
@@ -184,8 +188,10 @@
       <img src="model3.jpg" alt="Hailey">
       <h2>Hailey, 23</h2>
       <p>Young and vibrant. Full of energy for an unforgettable experience.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Dinner Date, Private Time</p>
+      <p><strong>Height:</strong> 165cm | <strong>Weight:</strong> 49kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 26" | <strong>Hips:</strong> 38"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Dinner Date, Private Time</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Hailey" class="book-btn">Book Now</a>
     </div>
 
@@ -194,8 +200,10 @@
       <img src="model4.jpg" alt="Hyacinth">
       <h2>Hyacinth, 25</h2>
       <p>Mature and sophisticated, perfect for upscale events and travel.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Events, Travel, Private Time</p>
+      <p><strong>Height:</strong> 170cm | <strong>Weight:</strong> 53kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 29" | <strong>Hips:</strong> 42"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Events, Travel, Private Time</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Hyacinth" class="book-btn">Book Now</a>
     </div>
 
@@ -204,8 +212,10 @@
       <img src="model5.jpg" alt="Stephanie">
       <h2>Stephanie, 26</h2>
       <p>Playful and passionate. Loves intimate moments and deep connections.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Private Time, Dinner</p>
+      <p><strong>Height:</strong> 168cm | <strong>Weight:</strong> 52kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 28" | <strong>Hips:</strong> 43"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Private Time, Dinner</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Stephanie" class="book-btn">Book Now</a>
     </div>
 
@@ -214,11 +224,85 @@
       <img src="model6.jpg" alt="Kimberly">
       <h2>Kimberly, 26</h2>
       <p>Stylish and outgoing. The perfect partner for parties and nightlife.</p>
-      <p class="rate">Rates: $250/hour</p>
-      <p>Inclusions: Party, Drinks, Private Time</p>
+      <p><strong>Height:</strong> 167cm | <strong>Weight:</strong> 51kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 27" | <strong>Hips:</strong> 40"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p><strong>Inclusions:</strong> Party, Drinks, Private Time</p>
       <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Kimberly" class="book-btn">Book Now</a>
     </div>
-  </div>
+
+    <!-- Model 7 -->
+    <div class="model-card">
+      <img src="model7.jpg" alt="Kate">
+      <h2>Kate, 24</h2>
+      <p>Graceful and confident. A stunning companion for elegant nights.</p>
+      <p><strong>Height:</strong> 168cm | <strong>Weight:</strong> 51kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 27" | <strong>Hips:</strong> 40"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Dinner, Events, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Kate" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 8 -->
+    <div class="model-card">
+      <img src="model8.jpg" alt="Karen">
+      <h2>Karen, 22</h2>
+      <p>Sophisticated yet playful. A delightful presence for any occasion.</p>
+      <p><strong>Height:</strong> 165cm | <strong>Weight:</strong> 49kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 26" | <strong>Hips:</strong> 39"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Dinner, Drinks, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Karen" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 9 -->
+    <div class="model-card">
+      <img src="model9.jpg" alt="Alexa">
+      <h2>Alexa, 24</h2>
+      <p>Charming and adventurous. The perfect partner for nightlife and travel.</p>
+      <p><strong>Height:</strong> 170cm | <strong>Weight:</strong> 53kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 29" | <strong>Hips:</strong> 42"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Night Out, Travel, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Alexa" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 10 -->
+    <div class="model-card">
+      <img src="model10.jpg" alt="Chloe">
+      <h2>Chloe, 23</h2>
+      <p>Sweet and sophisticated. A gorgeous match for refined evenings.</p>
+      <p><strong>Height:</strong> 166cm | <strong>Weight:</strong> 50kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 28" | <strong>Hips:</strong> 41"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Dinner, Drinks, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Chloe" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 11 -->
+    <div class="model-card">
+      <img src="model11.jpg" alt="Shaine Yu">
+      <h2>Shaine Yu, 23</h2>
+      <p>Exotic and alluring. Brings warmth and energy to every encounter.</p>
+      <p><strong>Height:</strong> 169cm | <strong>Weight:</strong> 52kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 27" | <strong>Hips:</strong> 43"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Events, Dinner, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Shaine%20Yu" class="book-btn">Book Now</a>
+    </div>
+
+    <!-- Model 12 -->
+    <div class="model-card">
+      <img src="model12.jpg" alt="Claire">
+      <h2>Claire, 22</h2>
+      <p>Fresh and radiant. The perfect balance of beauty and elegance.</p>
+      <p><strong>Height:</strong> 165cm | <strong>Weight:</strong> 49kg</p>
+      <p><strong>Bust:</strong> 44" | <strong>Waist:</strong> 26" | <strong>Hips:</strong> 38"</p>
+      <p class="rate"><strong>Rates:</strong> $250 (1h), $300 (2h), $350 (3h), $400 (4h), $450 (6h), $500 (8h), $600 (10h)</p>
+      <p>Inclusions: Dinner, Private Time</p>
+      <a href="mailto:australiaescortbooking1989@gmail.com?subject=Booking%20Claire" class="book-btn">Book Now</a>
+    </div>
+
 
   <footer>
    <p>Contact us: <a href="mailto:australiaescortbooking1989@gmail.com">australiaescortbooking1989@gmail.com</a></p>
